[tool.poetry]
name = "labyrinth-game"
version = "0.1.0"
description = "Текстовая приключенческая игра в лабиринте"
authors = ["Ваше Имя <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.builders"

[tool.poetry.scripts]
labyrinth-game = "labyrinth_game.main:main"